# cognition-app

./: .gitignore  APPROVAL_WORKFLOW_TESTING.md  Makefile  README.md  TESTING_RECENT_SORTING.md  TEST_DATA_VERIFICATION.md  verify_test_data.py
backend/: .env  README.md  pyproject.toml
backend/app/: main.py
backend/tests/: conftest.py  test_api_endpoints.py  test_data_utilities.py  test_issue_endpoints.py  test_issue_sorting.py  test_main.py  test_repo_endpoints.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DarkModeToggle.tsx  IssueDashboard.tsx  IssueDetailModal.tsx  RepoNavigator.tsx  SearchFilterWarning.tsx  ThemeToggle.tsx
frontend/src/components/__tests__/: IssueDashboard.test.tsx
frontend/src/components/ui/: badge.tsx  theme-toggle.tsx
frontend/src/hooks/: useSessionManager.ts
frontend/src/test/: setup.ts
frontend/src/utils/: sessionStatusUtils.ts  structuredOutputUtils.ts
